# upshift-club-aggregator

./: .gitignore  .replit  BACKLOG.md  CLAUDE.md  README.md  missing_urls_naia_20260422.csv  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  replit.nix  tsconfig.json
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1776284177303.txt  Pasted--No-I-don-t-see-any-playlist-of-thoughts-Nothing-in-thi_1776212525693.txt  Pasted--Replit-Runbook-Upshift-Data-Waves-1-2-Enum-Split-Post-_1776857297221.txt  Pasted--Rosters-excellent-16-342-rows-across-4-seasons-That-s-_1776735030150.txt  Pasted--workspace-python3-run-py-python3-can-t-open-file-home-_1775620455129.txt  Pasted-Good-While-Replit-s-Agent-is-working-through-it-a-few-t_1776910479181.txt  Pasted-Good-catch-by-Replit-This-is-exactly-the-kind-of-thing-_1776910571638.txt  Pasted-Part-2-The-migration-SQL-After-editing-the-schema-run-p_1776910178056.txt  Pasted-Replit-run-sequence-Copy-paste-blocks-Run-in-order-Stop_1776858402650.txt  Pasted-Right-call-Let-me-lay-the-whole-thing-out-so-we-can-str_1776212653924.txt  Pasted-Strong-review-Going-through-it-honestly-My-vote-on-each_1776213475177.txt  Pasted-This-is-a-solid-plan-Replit-s-Agent-read-the-real-schem_1776910821916.txt  Pasted-You-are-implementing-Phase-2-of-the-nav-leaked-names-da_1776735082408.txt  Pasted-You-are-shipping-a-Phase-0-probe-of-the-US-Soccer-Learn_1776734809451.txt  README_1775613031216.md  canonical_schema_1775613031221.sql  (+2 more)
docs/: path-a-data-model.md  (+5 more)
(+782 files in other folders)
