[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
]
